@@ -2,6 +2,7 @@ package com.tn.softsys.blocoperatoire.security;
 
 import com.tn.softsys.blocoperatoire.domain.Role;
 import com.tn.softsys.blocoperatoire.domain.User;
+
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
@@ -16,7 +17,6 @@ import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class JwtService {
@@ -24,6 +24,7 @@ public class JwtService {
     @Value("${jwt.secret}")
     private String secret;
 
+    // exemple: 1800000 = 30 minutes
     @Value("${jwt.expiration}")
     private long expiration;
 
@@ -32,11 +33,14 @@ public class JwtService {
     ======================================================= */
 
     private Key getSigningKey() {
-        return Keys.hmacShaKeyFor(secret.getBytes(StandardCharsets.UTF_8));
+
+        return Keys.hmacShaKeyFor(
+                secret.getBytes(StandardCharsets.UTF_8)
+        );
     }
 
     /* =======================================================
-       ACCESS TOKEN
+       GENERATE ACCESS TOKEN
     ======================================================= */
 
     public String generateAccessToken(User user) {
@@ -44,64 +48,104 @@ public class JwtService {
         List<String> roles = user.getRoles()
                 .stream()
                 .map(Role::getNom)
-                .collect(Collectors.toList());
+                .toList();
 
         return Jwts.builder()
+
                 .setSubject(user.getEmail())
+
                 .claim("roles", roles)
+                .claim("nom", user.getNom())
+                .claim("prenom", user.getPrenom())
+                .claim("userId", user.getUserId())
+
                 .setIssuedAt(new Date())
-                .setExpiration(new Date(System.currentTimeMillis() + expiration))
+
+                .setExpiration(
+                        new Date(System.currentTimeMillis() + expiration)
+                )
+
                 .signWith(getSigningKey(), SignatureAlgorithm.HS256)
+
                 .compact();
     }
 
     /* =======================================================
-       EXTRACTION
+       EXTRACT EMAIL
     ======================================================= */
 
     public String extractEmail(String token) {
+
         return extractAllClaims(token).getSubject();
     }
 
+    /* =======================================================
+       EXTRACT EXPIRATION
+    ======================================================= */
+
     public Date extractExpiration(String token) {
+
         return extractAllClaims(token).getExpiration();
     }
 
     /* =======================================================
-       VALIDATION
+       EXTRACT CLAIMS
+    ======================================================= */
+
+    public Claims extractAllClaims(String token) {
+
+        try {
+
+            return Jwts.parserBuilder()
+                    .setSigningKey(getSigningKey())
+                    .build()
+                    .parseClaimsJws(token)
+                    .getBody();
+
+        } catch (JwtException e) {
+
+            throw new RuntimeException("Invalid JWT token", e);
+        }
+    }
+
+    /* =======================================================
+       TOKEN VALIDATION
     ======================================================= */
 
     public boolean isTokenValid(String token, UserDetails userDetails) {
 
         try {
+
             final String email = extractEmail(token);
 
             return email.equals(userDetails.getUsername())
                     && !isTokenExpired(token);
 
         } catch (JwtException | IllegalArgumentException e) {
+
             return false;
         }
     }
 
     /* =======================================================
-       EXPIRATION CHECK
+       TOKEN EXPIRED ?
     ======================================================= */
 
-    private boolean isTokenExpired(String token) {
-        return extractExpiration(token).before(new Date());
+    public boolean isTokenExpired(String token) {
+
+        return extractExpiration(token)
+                .before(new Date());
     }
 
     /* =======================================================
-       PARSE CLAIMS
+       REMAINING TIME (useful for AFK)
     ======================================================= */
 
-    private Claims extractAllClaims(String token) {
+    public long getRemainingTime(String token) {
 
-        return Jwts.parserBuilder()
-                .setSigningKey(getSigningKey())
-                .build()
-                .parseClaimsJws(token)
-                .getBody();
+        Date expirationDate = extractExpiration(token);
+
+        return expirationDate.getTime() - System.currentTimeMillis();
     }
+
 }
